src/App.scss
:root {
  --main-color: #393C9F;
  --background-main: rgb(172, 26, 164);
  --background-secondary: #8d8a90;
}

.App {
  min-height: 100vh;
  background-color: #3c40c4;
  background-size: cover;
  background-position: top bottom;
  color: white;
  font-family: "Tomorrow", sans-serif;
  display: flex;
  flex-direction: row;
  text-align: center;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index: 1;
  
  @media (max-width: 1000px) {
    flex-direction: column;
  }
}

.content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  
  @media (max-width: 1000px) {
    flex-direction: column;
  }
}

#keyboard-info {
  align-items: center;
  justify-content: center;
  text-align: center;
  border: 2px solid white;
  background-color: rgba(128, 128, 128, 0.247);
  border-radius: 0.375rem;
  padding: 2rem;
  width: 10rem;
  cursor: pointer;
}

.canvasOuter {
  padding-left: 3%;
}

.canvasInner {
  margin: 0 0 0 0;
  position: relative;
  z-index: 1;
}

.canvas {
  position: absolute;
  top: 11.75%;
  left: 23%;
  width: 55%;
  background-color: #8bac0f;

  @media (max-width: 480px) {
    left: 22.5%;
  }
}

.gameSection {
  width: 12%;
  margin-left: 3%;
  top: 38%;
  position: sticky;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
}
.gameCover {
  width: 25vh;
  height: 25vh;
}

// Falling leaves

#blossom-container {
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: hidden;  /* Ensure petals stay inside the container */

  @media (max-width: 990px) {
    height: 250%;
    padding-top: 5%;
  }
}

.petal {
	background: url(https://i.postimg.cc/7ZHdX33H/cherry-blossom.png) no-repeat;
	position: absolute;
	z-index: -1;        /* Ensures the petals are behind other elements within the container */


	&.petal-style1 {
		width: 45px;
		height: 20px;
		background-position: -31px 0;
	}
	&.petal-style2 {
		width: 42px;
		height: 22px;
		background-position: 0 -23px;
	}
	&.petal-style3 {
		width: 37px;
		height: 24px;
		background-position: 0 -50px;
	}
	&.petal-style4 {
		width: 26px;
		height: 34px;
		background-position: -49px -35px;
	}
}

